# jarvis-node-setup

./: .dockerignore  .env  .env.example  .gitignore  API_FORMAT_UPDATES.md  CLAUDE.md  COMMAND_DESCRIPTIONS_UPDATED.md  COMMAND_DESCRIPTION_IMPROVEMENTS.md  COMMAND_REFACTOR_SUMMARY.md  Dockerfile  JSON_SERIALIZATION_FIX.md  README.md  SERVER_ERROR_FIX.md  SPEAK_MESSAGE_REMOVAL.md  SPEAK_MESSAGE_REMOVAL_SUMMARY.md  TEST_RESULTS.md  TEST_RESULTS_ANALYSIS.md  TEST_RESULTS_FEATURE.md  TEST_UPDATES.md  TOOL_CALLING_ARCHITECTURE.md  adapter_system_prompt.txt  alembic.ini  alembic_migrate.sh  alembic_upgrade.sh  config-mac.json  config-template.json  config.example.json  custom-requirements.txt  db.py  dev_macos.py  docker-compose.dev.yaml  docker-compose.multi-node.yaml  docker-compose.yaml  dump_adapter_examples.py  env.template  eval_gate.py  extract_ha_fingerprints.py  fingerprint_sources.md  ha_agent_dump.json  ha_fingerprints.json  (+26 more)
agents/: __init__.py  calendar_alert_agent.py  device_discovery_agent.py  email_alert_agent.py  home_assistant_agent.py  news_alert_agent.py  reminder_agent.py  token_refresh_agent.py
alembic/: env.py
calendar_shared/: date_util.py  google_calendar_service.py  icloud_calendar_service.py
clients/: command_store_client.py  jarvis_command_center_client.py  jarvis_whisper_client.py  rest_client.py
commands/: answer_question_command.py  bluetooth_command.py  calculator_command.py  cancel_timer_command.py  chat_command.py  check_timers_command.py  control_device_command.py  control_music_command.py  email_command.py  example_light_command.py  (+20 more)
(+358 files in other folders)
